--- a/class/index.html
+++ b/class/index.html
@@ -501,13 +501,13 @@
     <div id="promoListAbsent"></div>
   </div>
   
-  <div id="attListPop" class="pop">
+  <div id="attendanceListPop" class="pop">
       <div class="navigationButtonContainer">
-        <div class="backButton" onclick="pop('attListPop','mainMenuPop')"><span>f</span></div>
+        <div class="backButton" onclick="pop('attendanceListPop','mainMenuPop')"><span>f</span></div>
         <div class="homeButton" onclick="goHome()"><span>5</span></div>
       </div>
-      <p id="attCount" onclick="actionAlert('Reset attendance?','attListPop',false,resetAttendance)"></p>
-      <div id="attList"></div>
+      <p id="attendanceCount" onclick="actionAlert('Reset attendance?','attendanceListPop',false,resetAttendance)"></p>
+      <div id="attendanceList"></div>
   </div>
 
   <div id="bdayPop" class="pop">
