--- a/class/index.html
+++ b/class/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ontouch>
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -57,29 +57,22 @@
   </div>
 
   <div id="teamsListPop" class="pop">
-
     <div class="navigationButtonContainer">
       <div class="backButton" onclick="pop('teamsListPop','mainMenuPop')"><span>f</span></div>
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
-    
     <div id="teamListContainer">
-
       <div id=team1ListDiv>
         <p>Team1</p>
         <div id="team1List"></div>
       </div>
-
       <div id=team2ListDiv>
         <p>Team2</p>
         <div id="team2List"></div>
       </div>
-
     </div>
-
     <div class="button" onclick="loadGame()">Play Game</div>
     <div class="button" onclick="actionAlert('Generate new teams and start new game?','teamsListPop',false,createTeams)">Reset Game</div>
-
   </div>
 
 
@@ -89,34 +82,30 @@
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
     <div id="teamPointsContainer">
-
       <div>
         <p>Team 1</p>
         <div id="team1Score" onclick="adjustGameScore(1)">0</div>
       </div>
-
       <div>
         <p>Team 2</p>
         <div id="team2Score" onclick="adjustGameScore(2)">0</div>
       </div>
-
     </div>
-
     <p id="currentPlayer"></p>
-
     <div id="gamePointButtonsContainer">
-      <div class="gamePointButton" onclick="gameScorePoints(1)">1</div>
-      <div class="gamePointButton" onclick="gameScorePoints(2)">2</div>
-      <div class="gamePointButton" onclick="gameScorePoints(3)">3</div>
-      <div class="gamePointButton" onclick="gameScorePoints(4)">4</div>
-      <div class="gamePointButton" onclick="gameScorePoints(5)">5</div>
-      <div class="gamePointButton" onclick="gameScorePoints(6)">6</div>
-      <div class="gamePointButton" onclick="gameScorePoints(7)">7</div>
-      <div class="gamePointButton" onclick="gameScorePoints(8)">8</div>
-      <div class="gamePointButton" onclick="gameScorePoints(9)">9</div>
-      <div class="gamePointButton" onclick="gameScorePoints(10)">10</div>
+      <div class="gamePointButton" id="gamePoint1" onclick="gameScorePoints(1)">1</div>
+      <div class="gamePointButton" id="gamePoint2" onclick="gameScorePoints(2)">2</div>
+      <div class="gamePointButton" id="gamePoint3" onclick="gameScorePoints(3)">3</div>
+      <div class="gamePointButton" id="gamePoint4" onclick="gameScorePoints(4)">4</div>
+      <div class="gamePointButton" id="gamePoint5" onclick="gameScorePoints(5)">5</div>
+      <div class="gamePointButton" id="gamePoint6" onclick="gameScorePoints(6)">6</div>
+      <div class="gamePointButton" id="gamePoint7" onclick="gameScorePoints(7)">7</div>
+      <div class="gamePointButton" id="gamePoint8" onclick="gameScorePoints(8)">8</div>
+      <div class="gamePointButton" id="gamePoint9" onclick="gameScorePoints(9)">9</div>
+      <div class="gameUndoButton" onclick="undoGameScorePoints()">b</div>
+      <div class="gamePointButton" id="gamePoint10" onclick="gameScorePoints(10)">10</div>
+      <div class="gameLogButton" onclick="pop('playGamePop','gameLogPop')">Log</div>
     </div>
-
   </div>
 
   <div id="advancedOptionsPop" class="pop">
@@ -126,7 +115,9 @@
     </div>
     <label class="checkboxLabel"><input type="checkbox" id="rapidEntryCheck" class="checkbox"> Fast student entry</label><br>
     <label class="checkboxLabel"><input type="checkbox" id="rapidEditCheck" class="checkbox"> Fast student edit</label><br>
-    <label class="checkboxLabel"><input type="checkbox" id="randomAttendanceCheck" class="checkbox" onclick="toggleRandomAttendance()"/> Randomize attendance</label><br>
+    <div class="buttonSmallerText" onclick="randomAttendance()">Randomize Attendance</div>
+    <div class="button" onclick="preloadImages()">Preload Images</div>
+
   </div>
 
   <div id="infoAlertPop" class="pop">
@@ -212,6 +203,14 @@
     <p id="todaysDate"></p>
     <input id="searchLog" type="text" placeholder="search log" oninput="searchLog()"/>
     <div id="log"></div>
+  </div>
+
+  <div id="gameLogPop" class="pop">
+    <div class="navigationButtonContainer">
+      <div class="backButton" onclick="pop('gameLogPop','playGamePop')"><span>f</span></div>
+      <div class="homeButton" onclick="goHome()"><span>5</span></div>
+    </div>
+    <div id="gameLog"></div>
   </div>
 
   <div id="studentPop" class="pop">
@@ -532,6 +531,102 @@
     </div>
   </div>
     
+  <div id="preloadImagesPop" class="pop">
+    <div class="navigationButtonContainer">
+      <div class="backButton" onclick="pop('preloadImagesPop','advancedOptionsPop')"><span>f</span></div>
+      <div class="homeButton" onclick="goHome()"><span>5</span></div>
+    </div>
+    <div id="0-rank" class="preloadRankImageDiv"></div>
+    <div id="1-rank" class="preloadRankImageDiv"></div>
+    <div id="2-rank" class="preloadRankImageDiv"></div>
+    <div id="3-rank" class="preloadRankImageDiv"></div>
+    <div id="4-rank" class="preloadRankImageDiv"></div>
+    <div id="5-rank" class="preloadRankImageDiv"></div>
+    <div id="6-rank" class="preloadRankImageDiv"></div>
+    <div id="7-rank" class="preloadRankImageDiv"></div>
+    <div id="8-rank" class="preloadRankImageDiv"></div>
+    <div id="9-rank" class="preloadRankImageDiv"></div>
+    <div id="10-rank" class="preloadRankImageDiv"></div>
+    <div id="11-rank" class="preloadRankImageDiv"></div>
+    <div id="12-rank" class="preloadRankImageDiv"></div>
+    <div id="13-rank" class="preloadRankImageDiv"></div>
+    <div id="14-rank" class="preloadRankImageDiv"></div>
+    <div id="15-rank" class="preloadRankImageDiv"></div>
+    <div id="16-rank" class="preloadRankImageDiv"></div>
+    <div id="17-rank" class="preloadRankImageDiv"></div>
+    <div id="18-rank" class="preloadRankImageDiv"></div>
+    <div id="19-rank" class="preloadRankImageDiv"></div>
+    <div id="1a-as" class="preloadAsImageDiv"></div>
+    <div id="1b-as" class="preloadAsImageDiv"></div>
+    <div id="2a-as" class="preloadAsImageDiv"></div>
+    <div id="2b-as" class="preloadAsImageDiv"></div>
+    <div id="3a-as" class="preloadAsImageDiv"></div>
+    <div id="3b-as" class="preloadAsImageDiv"></div>
+    <div id="4a-as" class="preloadAsImageDiv"></div>
+    <div id="4b-as" class="preloadAsImageDiv"></div>
+    <div id="5a-as" class="preloadAsImageDiv"></div>
+    <div id="5b-as" class="preloadAsImageDiv"></div>
+    <div id="6a-as" class="preloadAsImageDiv"></div>
+    <div id="6b-as" class="preloadAsImageDiv"></div>
+    <div id="7a-as" class="preloadAsImageDiv"></div>
+    <div id="7b-as" class="preloadAsImageDiv"></div>
+    <div id="8a-as" class="preloadAsImageDiv"></div>
+    <div id="8b-as" class="preloadAsImageDiv"></div>
+    <div id="9a-as" class="preloadAsImageDiv"></div>
+    <div id="9b-as" class="preloadAsImageDiv"></div>
+    <div id="10a-as" class="preloadAsImageDiv"></div>
+    <div id="10b-as" class="preloadAsImageDiv"></div>
+    <div id="11a-as" class="preloadAsImageDiv"></div>
+    <div id="11b-as" class="preloadAsImageDiv"></div>
+    <div id="12a-as" class="preloadAsImageDiv"></div>
+    <div id="12b-as" class="preloadAsImageDiv"></div>
+    <div id="12c-as" class="preloadAsImageDiv"></div>
+    <div id="13a-as" class="preloadAsImageDiv"></div>
+    <div id="13b-as" class="preloadAsImageDiv"></div>
+    <div id="14a-as" class="preloadAsImageDiv"></div>
+    <div id="14b-as" class="preloadAsImageDiv"></div>
+    <div id="15a-as" class="preloadAsImageDiv"></div>
+    <div id="15b-as" class="preloadAsImageDiv"></div>
+    <div id="16a-as" class="preloadAsImageDiv"></div>
+    <div id="16b-as" class="preloadAsImageDiv"></div>
+    <div id="17a-as" class="preloadAsImageDiv"></div>
+    <div id="17b-as" class="preloadAsImageDiv"></div>
+    <div id="18a-as" class="preloadAsImageDiv"></div>
+    <div id="18b-as" class="preloadAsImageDiv"></div>
+    <div id="19a-as" class="preloadAsImageDiv"></div>
+    <div id="19b-as" class="preloadAsImageDiv"></div>
+    <div id="20a-as" class="preloadAsImageDiv"></div>
+    <div id="20b-as" class="preloadAsImageDiv"></div>
+    <div id="21a-as" class="preloadAsImageDiv"></div>
+    <div id="21b-as" class="preloadAsImageDiv"></div>
+    <div id="22a-as" class="preloadAsImageDiv"></div>
+    <div id="22b-as" class="preloadAsImageDiv"></div>
+    <div id="23a-as" class="preloadAsImageDiv"></div>
+    <div id="23b-as" class="preloadAsImageDiv"></div>
+    <div id="24a-as" class="preloadAsImageDiv"></div>
+    <div id="24b-as" class="preloadAsImageDiv"></div>
+    <div id="25a-as" class="preloadAsImageDiv"></div>
+    <div id="25b-as" class="preloadAsImageDiv"></div>
+    <div id="25c-as" class="preloadAsImageDiv"></div>
+    <div id="26a-as" class="preloadAsImageDiv"></div>
+    <div id="26b-as" class="preloadAsImageDiv"></div>
+    <div id="27a-as" class="preloadAsImageDiv"></div>
+    <div id="27b-as" class="preloadAsImageDiv"></div>
+    <div id="28a-as" class="preloadAsImageDiv"></div>
+    <div id="28b-as" class="preloadAsImageDiv"></div>
+    <div id="29a-as" class="preloadAsImageDiv"></div>
+    <div id="29b-as" class="preloadAsImageDiv"></div>
+    <div id="30a-as" class="preloadAsImageDiv"></div>
+    <div id="30b-as" class="preloadAsImageDiv"></div>
+    <div id="31a-as" class="preloadAsImageDiv"></div>
+    <div id="31b-as" class="preloadAsImageDiv"></div>
+    <div id="32a-as" class="preloadAsImageDiv"></div>
+    <div id="32b-as" class="preloadAsImageDiv"></div>
+    <div id="33a-as" class="preloadAsImageDiv"></div>
+    <div id="33b-as" class="preloadAsImageDiv"></div>
+    <div id="33c-as" class="preloadAsImageDiv"></div>
+  </div>
+
 </div> <!--end of master-wrapper-->
 <script src="backup.js"></script>
 <script src="main.js"></script>
