--- a/class/index.html
+++ b/class/index.html
@@ -49,7 +49,7 @@
             <div class="button" onclick="pop('mainMenuPop','randomPop')">Random</div>
             <div class="button" onclick="teams()">Teams</div>
             <div class="button" id="teacherNotesButton" onclick="pop('mainMenuPop','teacherNotesPop'); populateTeacherNotes()">Notes</div>
-            <div class="button" onclick="pop('logPop','mainMenuPop')">Log</div>
+            <div class="button" onclick="pop('mainMenuPop','logPop')">Log</div>
             <div class="button" onclick="pop('mainMenuPop','backupPop')">Backup</div>
             <div class="button" onclick="pop('mainMenuPop','advancedOptionsPop')">Advanced</div>
         </div>
