--- a/class/index.html
+++ b/class/index.html
@@ -205,6 +205,7 @@
       <label class="checkboxLabel"><input type="checkbox" id="check30" class="checkbox" onclick="toggleMissions('30')"/> Shield / Eph 6:16</label><br>
       <label class="checkboxLabel"><input type="checkbox" id="check31" class="checkbox" onclick="toggleMissions('31')"/> Helmet / Eph 6:17</label><br>
       <label class="checkboxLabel"><input type="checkbox" id="check32" class="checkbox" onclick="toggleMissions('32')"/> Sword / Eph 6:18</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check33" class="checkbox" onclick="toggleMissions('33')"/> Armor Review / no verse</label><br>
   </div>
 
   <div id="wtlPop" class="pop buttonArr">
@@ -452,7 +453,7 @@
       </div>
       <div id="mvPop">
         <div class="asmvHeader" onclick="pop('studentPop','missionVisibilityPop','missionsPop')">Memory<br>Verses</div>
-        <div class="asmvButtonFill w33"></div>
+        <div id="mv33Pop" class="asmvButtonFill w33"></div>
         <div id="mv32Pop" class="mvButton4 w32" onclick="mvPop('mv32',31)">Eph<br>6:18<br>"praying at"</div>
         <div id="mv31Pop" class="mvButton3 w31" onclick="mvPop('mv31',30)">Eph<br>6:17<br>"and take"</div>
         <div id="mv30Pop" class="mvButton3 w30" onclick="mvPop('mv30',29)">Eph<br>6:16<br>"In all"</div>
