--- a/class/index.html
+++ b/class/index.html
@@ -281,6 +281,10 @@
         <td id="progressBar18"></td>
       </tr>
     </table>
+    <p id="attendanceScore"></p>
+    <p id="activityScore"></p>
+    <p id="memoryScore"></p>
+    <p id="participationScore"></p>
   </div>
 
   <div id="newStudentPop" class="pop">
