--- a/class/index.html
+++ b/class/index.html
@@ -309,6 +309,8 @@
         <td id="rankProgressBar36"></td>
         <td id="rankProgressBar37"></td>
         <td id="rankProgressBar38"></td>
+        <td id="rankProgressBar39"></td>
+        <td id="rankProgressBar40"></td>
       </tr>
     </table>
     <p id="asProgressTableP"></p>
@@ -352,6 +354,8 @@
         <td id="asProgressBar36"></td>
         <td id="asProgressBar37"></td>
         <td id="asProgressBar38"></td>
+        <td id="asProgressBar39"></td>
+        <td id="asProgressBar40"></td>
       </tr>
     </table>
     <p id="mvProgressTableP"></p>
@@ -395,6 +399,8 @@
         <td id="mvProgressBar36"></td>
         <td id="mvProgressBar37"></td>
         <td id="mvProgressBar38"></td>
+        <td id="mvProgressBar39"></td>
+        <td id="mvProgressBar40"></td>
       </tr>
     </table>
     <p id="attendanceProgressTableP"></p>
@@ -438,6 +444,8 @@
         <td id="attendanceProgressBar36"></td>
         <td id="attendanceProgressBar37"></td>
         <td id="attendanceProgressBar38"></td>
+        <td id="attendanceProgressBar39"></td>
+        <td id="attendanceProgressBar40"></td>
       </tr>
     </table>
     <p id="totalProgressTableP"></p>
@@ -481,6 +489,8 @@
         <td id="totalProgressBar36"></td>
         <td id="totalProgressBar37"></td>
         <td id="totalProgressBar38"></td>
+        <td id="totalProgressBar39"></td>
+        <td id="totalProgressBar40"></td>
       </tr>
     </table>
   </div>
