--- a/class/index.html
+++ b/class/index.html
@@ -143,7 +143,7 @@
     <div class="navigationButtonContainer">
       <div class="backButton" onclick="infoAlert()"><span>f</span></div>
     </div>
-      <p id="infoAlertTitle">Error</p>
+      <p id="infoAlertTitle">#</p>
       <p id="infoAlertMessage"></p>
   </div>
 
