--- a/class/index.html
+++ b/class/index.html
@@ -258,7 +258,7 @@
       <div class="backButton" onclick="pop('studentPhotoPop','studentPop',false,'missionsPop')"><span>f</span></div>
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
-    <div id="dispStudentPhoto"></div>
+    <div id="dispStudentPhoto" onclick="photoLinks()"></div>
   </div>
 
   <div id="studentStatsPop" class="pop">
