--- a/class/index.html
+++ b/class/index.html
@@ -158,10 +158,10 @@
   <div id="dataInputAlertPop" class="pop">
     <p id="dataInputAlertMessage"></p>
     <input id="dataInputTextField" type="text"/>
-    <div id="enterReasonDiv">
+<!--     <div id="enterReasonDiv">
       <p>Reason (required):</p>
       <textarea id="enterReasonTextField" rows="10" cols="30"></textarea>
-    </div>
+    </div> -->
     <div class="optionButtonContainer">
       <div class="cancelButton" onclick="dataInputAlert(false,false,false,false,false,false,true)">X</div>
       <div class="okButton" onclick="dataInputAlert()">V</div>
