--- a/class/index.html
+++ b/class/index.html
@@ -163,7 +163,7 @@
       <textarea id="enterReasonTextField" rows="10" cols="30"></textarea>
     </div> -->
     <div class="optionButtonContainer">
-      <div class="cancelButton" onclick="dataInputAlert(false,false,false,false,false,false,true)">X</div>
+      <div class="cancelButton" onclick="dataInputAlert(false,false,false,false,false,false,true)">XX</div>
       <div class="okButton" onclick="dataInputAlert()">V</div>
     </div>
   </div>
