--- a/class/index.html
+++ b/class/index.html
@@ -103,7 +103,7 @@
     <div id="teamPointsContainer">
       <div>
         <p>Team 1</p>
-        <div id="team1Score" onclick="dataInputAlert('Adjust team 1 score','playGamePop',false,false,adjustGameScore,1)">0</div>
+        <div id="team1Score" onclick="dataInputAlert('Adjust team 1 score','playGamePop',false,false,adjustGameScore)">0</div>
       </div>
       <div>
         <p>Team 2</p>
@@ -158,12 +158,12 @@
   <div id="dataInputAlertPop" class="pop">
     <p id="dataInputAlertMessage"></p>
     <input id="dataInputTextField" type="text"/>
-<!--     <div id="enterReasonDiv">
+    <div id="enterReasonDiv">
       <p>Reason (required):</p>
       <textarea id="enterReasonTextField" rows="10" cols="30"></textarea>
-    </div> -->
+    </div>
     <div class="optionButtonContainer">
-      <div class="cancelButton" onclick="dataInputAlert(false,false,false,false,false,false,true)">XX</div>
+      <div class="cancelButton" onclick="dataInputAlert(false,false,false,false,false,false,true)">X</div>
       <div class="okButton" onclick="dataInputAlert()">V</div>
     </div>
   </div>
