--- a/class/index.html
+++ b/class/index.html
@@ -103,7 +103,7 @@
     <div id="teamPointsContainer">
       <div>
         <p>Team 1</p>
-        <div id="team1Score" onclick="dataInputAlert('Adjust team 1 score','playGamePop',false,false,adjustGameScore)">0</div>
+        <div id="team1Score" onclick="dataInputAlert('Adjust team 1 score','playGamePop',false,false,adjustGameScore,1)">0</div>
       </div>
       <div>
         <p>Team 2</p>
